# sastre

./: .gitignore  CHANGELOG.md  CHANGES  Dockerfile  Jenkinsfile  LICENSE  README.md  USECASE.md  cat.json  container-init.sh  dcloud-lab.sh  pyproject.toml  requirements.txt  sastre-rc-example.sh  sastre-rc.sh  sastre.py  sdwan.py  setup.py  sonar-project.properties
cisco_sdwan/: __init__.py  __main__.py  __version__.py  cmd.py
cisco_sdwan/base/: catalog.py  migration.py  models_base.py  models_vmanage.py  processor.py  rest_api.py
cisco_sdwan/migration/: __init__.py  device_migration.py  device_template_recipes.json  feature_migration.py  feature_template_recipes.json
cisco_sdwan/migration/feature_templates/: Factory_Default_AAA_CISCO_Template.json  Factory_Default_Global_CISCO_Template.json
cisco_sdwan/tasks/: common.py  implementation.py  models.py  utils.py  validators.py
cisco_sdwan/tasks/implementation/: __init__.py  _attach_detach.py  _backup.py  _certificate.py  _delete.py  _encrypt.py  _list.py  _migrate.py  _report.py  _restore.py  _show.py  _transform.py  (+1 more)
examples/: bmt-migration-cedge.yaml  bmt-migration-vedge.yaml  bmt-migration.yaml  report_spec1.yaml  sastre-env.sh  transform_recipe.yaml
installer/mac/: README.md  build-macos-x64.sh  uninstall.applescript
installer/windows/: LICENSE.txt  README.md  container_engine.bat  install.bat  main.bat  sastre-pro.bat  sastre-pro.nsi  uninstall.bat
lib/: catalog.py  config_items.py  defaults.py  models_base.py  models_vmanage.py  rest_api.py  task_common.py  utils.py
tests/unittests/: task_tests.py
(+12 files in other folders)
