[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cisco-sdwan"
description = "Cisco-SDWAN Automation Toolset"
authors = [
  { name = "Marcelo Reis", email = "sastre-support@cisco.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable"
]
keywords = ["sdwan", "cisco", "viptela", "sastre", "network"]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "PyYAML",
    "pydantic>=1.10, <2.0"
]
dynamic = ["version"]

[project.scripts]
sdwan = "cisco_sdwan.__main__:main"
sastre = "cisco_sdwan.__main__:main"

[project.urls]
"Homepage" = "https://github.com/CiscoDevNet/sastre"
"Bug Tracker" = "https://github.com/CiscoDevNet/sastre/issues"

[tool.hatch.version]
path = "cisco_sdwan/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cisco_sdwan",
]
